syntax = "proto3";
package com.simple.grpc;

option java_package="com.simple.grpc";

// Request payload
message DataRequest {
    bytes data = 1;
}

message DataResponse {
    string ack = 1;
}

// Defining a Service, a Service can have multiple RPC operations
service GRpcService {
  // Define a RPC operation
  rpc sendData (DataRequest) returns (DataResponse);
}